<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WIOmote</string>
    <string name="permission">Location</string>
    <string name="network">Network</string>
    <string name="connect">Send network data ↗</string>
    <string name="connecting">Connecting to the terminal…</string>
    <string name="password">Password</string>
    <string name="waiting">Waiting for terminal…</string>
    <string name="waiting_input">Waiting for IR…</string>
    <string name="remove_confirmation">Are you sure?</string>
    <string name="label">Label</string>
    <string name="network_connection">Please connect to the Wi-Fi network the terminal should use ↗</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_connection">Bluetooth needed to connect to the terminal ↗</string>
    <string name="bluetooth_connection_enforce">Allow Bluetooth access in settings to connect to the terminal when offline.</string>
    <string name="location">Precise location needed to connect the terminal ↗</string>
    <string name="location_enforce">Allow precise location access in settings to retrieve WiFi data.</string>
    <string name="connection_lost">Terminal not connected</string>
    <string name="go_to_setup">Connection lost. Go to Setup ↗</string>
    <string name="go_to_settings">Go to Settings ↗</string>
    <string name="configurations">Configurations</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="delete_alt_text">Delete</string>
</resources>