<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/archivo_semi_expanded_regular"
        android:hint="@string/label"
        android:padding="10dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <se.gu.wiomote.views.ListeningButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/dmsans_regular"
            android:gravity="center"
            android:lineHeight="@dimen/button_text_size"
            android:padding="@dimen/button_padding"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textColor="@color/button_content_tint"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <se.gu.wiomote.views.ListeningButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_tint"
            android:enabled="false"
            android:fontFamily="@font/dmsans_regular"
            android:gravity="center"
            android:lineHeight="@dimen/button_text_size"
            android:padding="@dimen/button_padding"
            android:text="@string/save"
            android:textColor="@color/button_content_tint"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>

</LinearLayout>