<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="@dimen/large_margin"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:requiresFadingEdge="vertical">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:divider="@drawable/empty_divider"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_margin"
        android:paddingTop="@dimen/large_margin"
        android:paddingEnd="@dimen/default_margin"
        android:paddingBottom="@dimen/large_margin"
        android:showDividers="middle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_semi_expanded_regular"
            android:letterSpacing="-0.02"
            android:text="@string/permission"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/title_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_tint"
            android:drawableLeft="@drawable/ic_location"
            android:fontFamily="@font/dmsans_regular"
            android:gravity="start|center_vertical"
            android:lineHeight="@dimen/button_text_size"
            android:padding="@dimen/button_padding"
            android:text="@string/location"
            android:textColor="@color/button_content_tint"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius"
            app:iconPadding="@dimen/button_icon_padding"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:id="@+id/setup_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_divider"
            android:orientation="vertical"
            android:showDividers="middle"
            android:translationZ="-1px"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_semi_expanded_regular"
                android:letterSpacing="-0.02"
                android:text="@string/network"
                android:textColor="?attr/colorOnBackground"
                android:textSize="@dimen/title_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_error_tint"
                android:drawableLeft="@drawable/ic_error"
                android:fontFamily="@font/dmsans_regular"
                android:gravity="start|center_vertical"
                android:lineHeight="@dimen/button_text_size"
                android:padding="@dimen/button_padding"
                android:text="@string/no_wifi"
                android:textColor="@color/button_content_error_tint"
                android:textSize="@dimen/button_text_size"
                app:cornerRadius="@dimen/button_corner_radius"
                app:iconPadding="@dimen/button_icon_padding"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>